# esphome-jkbms

./: .gitignore  .gitmodules  .prettierignore  .prettierrc.json  AGENTS.md  Justfile  LICENSE  README.md  jeka_116.yaml  jk-pb-bms.ble-full.yaml.bak  jk-pb-bms.full.yaml.bak  jk-pb-bms.modbus-debug.yaml.bak  jk-pb-bms.yaml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  secrets.yaml.example
.claude/agents/: esphome-ota.md  ha-deploy-verify.md  ha-live-debug.md  recorder-housekeeper.md  zigbee-mesh-doctor.md
.github/workflows/: ci.yml
dashboard/: alarm.html  bms-integrated.html  dashboard.html
dashboard/advanced/: app.js  index.html  style.css
dashboard/alarm/: app.js  index.html  style.css
dashboard/bms/: app.js  index.html  style.css
dashboard/history/: app.js  index.html  style.css
dashboard/lib/: alarm-fsm.js  auto-update.js  dom.js  ha.js  i18n.js  poll.js  predict.js  sun.js  version-check.js  zones.js
homeassistant/: alarm-helpers.yaml  heater-helpers.yaml
homeassistant/addons/: 45df7312_zigbee2mqtt.json  5c53de3b_esphome.json  a0d7b954_nodered.json  a0d7b954_ssh.json  a0d7b954_tailscale.json  cb646a50_get.json  core_mosquitto.json
inverter/: easun.yaml
node-red/: battery-room-alarm.flow.json  heater-control.flow.json
scripts/: check.sh  deploy-ha.sh  fmt.sh  minify-html.py  ping-siren.py  rename-ha-entities.mjs  restore-ha.sh  setup.sh  test-alarm-ha.sh  test.sh
tests/: _dom-mock.js  alarm-fsm.test.js  auto-update.test.js  i18n.test.js  predict.test.js  sun.test.js  version-check.test.js  zones.test.js
(+6 files in other folders)
